<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.findmyconcert.Profile">

    <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TableRow1"
        android:layout_width="fill_parent"
        android:layout_height="174dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="122dp"
            android:layout_height="98dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profilepicture" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="132dp"
            android:ems="10"
            android:inputType="textMultiLine" />

    </TableRow>

    <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TableRow2"
        android:layout_width="fill_parent"
        android:layout_height="102dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TableRow1">

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/exploreBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explore" />

            <Button
                android:id="@+id/sellTicektsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/findPeople" />

        </LinearLayout>

    </TableRow>

    <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TableRow3"
        android:layout_width="fill_parent"
        android:layout_height="108dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TableRow2">

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/yourActivityBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yourFeed" />

            <Button
                android:id="@+id/friendsActivityBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friendFeed" />

        </LinearLayout>

    </TableRow>

    <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TableRow4"
        android:layout_width="fill_parent"
        android:layout_height="109dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TableRow3">

        <LinearLayout
            android:id="@+id/LinearLayout03"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buyTicketsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buy" />

            <Button
                android:id="@+id/sellTicektsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sell" />

        </LinearLayout>

    </TableRow>


</android.support.constraint.ConstraintLayout>
